<resources>
    <string name="app_name">SunShine</string>

    <string name="error_forcasting">Can not get weather details.</string>

    <string name="action_settings">Settings</string>

    <string name="details_title_activity">Details</string>

    <string name="action_share">Share</string>

    <string name="action_show_map">Show location in map</string>

    <string name="list_pref_key" translatable="false">units</string>
    <string name="list_pref_label">Units</string>
    <string name="list_pref_default_value" translatable="false">@string/pref_metric_value</string>

    <string name="pref_metric_label">Metric (Celsius-Km/h)</string>
    <string name="pref_metric_value">met</string>

    <string name="pref_imperial_label">Imperial(Fahrenheit-Mile/h)</string>
    <string name="pref_imperial_value">imp</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">loc</string>
    <string name="pref_location_default_value">Kebili</string>

    <string name="pref_nottification_label">Enable notification</string>
    <string name="pref_notofication_key" translatable="false">not</string>
    <string name="pref_notification_enabled">Enabled</string>
    <string name="pref_notification_not_enabled">Not enabled</string>



    <string name="icon_description">weather icon</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="pressure">Pressure:</string>
    <string name="precipitation">Precipitation:</string>
    <string name="humidity">Humidity:</string>

    <string name="main_notification_channel_name">weather_notification_channel</string>
    <string name="weather_notification_title">SunShine</string>
    <string name="weather_notification_body">New weather data</string>
</resources>
