<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/list_pref_default_value"
        android:key="@string/list_pref_key"
        android:title="@string/list_pref_label"
        android:entries="@array/pref_locations_labels"
        android:entryValues="@array/pref_locations_keys">
    </ListPreference>

    <EditTextPreference
        android:defaultValue="@string/pref_location_default_value"
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"/>
    <CheckBoxPreference
        android:defaultValue="@bool/pref_notofication_default_value"
        android:title="@string/pref_nottification_label"
        android:key="@string/pref_notofication_key"
        android:summaryOn="@string/pref_notification_enabled"
        android:summaryOff="@string/pref_notification_not_enabled"/>
        />
</PreferenceScreen>